--- a/src/components/Navbar/nav.css
+++ b/src/components/Navbar/nav.css
@@ -13,7 +13,7 @@ body {
   flex-direction: row;
   justify-content: space-around;
   background-color: black;
-  padding: 20px;
+  padding: 25px;
   color: white;
   font-size: 18px;
   align-items: center;
@@ -62,4 +62,52 @@ body {
   text-decoration: none;
   padding: 10px 30px;
   list-style-type: none;
+}
+
+.fabars {
+  display: none;
+}
+
+@media (max-width: 831px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .logo {
+    margin: 0px;
+  }
+  .navbar {
+    display: none;
+  }
+
+  .fabars {
+    display: block;
+  }
+
+  .open {
+    background-color: white;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 80%;
+    height: 100vh;
+    color: black;
+    z-index: 1;
+    text-align: center;
+    padding: 30px 0px;
+  }
+
+  .open-menu {
+    margin-top: 30px;
+    list-style: none;
+    padding: 20px 0px;
+    background-color: whitesmoke;
+  }
+
+  .div {
+    position: relative;
+    margin-top: 30px;
+    width: 100%;
+  }
 }
