--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@
 
 .main-container img {
   width: 100%;
-  height: 600px;
+  height: 91vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
