--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 
 .links {
   list-style-type: none;
+  font-weight: bold;
 }
 
 .icons {
@@ -117,9 +118,36 @@
   width: 100%;
 }
 
-.main-container img {
+.background-image {
   width: 100%;
-  height: 91vh;
+  height: 90vh;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center center;
+  z-index: 0;
+}
+
+.image {
+  width: 100%;
+  height: 90vh;
+}
+
+.advertisment {
+  width: 100%;
+  margin: auto;
+  color: white;
+  position: absolute;
+  top: 40%;
+  background-color: rgba(0, 0, 0, 0.5);
+  min-height: 440px;
+  text-align: center;
+}
+
+.advertisment p {
+  font-size: 2rem;
+  margin: 40px 0px;
+}
+
+.advertisment button {
+  padding: 8px 20px;
 }
