--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   min-height: 440px;
   text-align: center;
+  position: absolute;
 }
 
 .advertisment p {
@@ -200,4 +201,9 @@
   background-color: red;
   color: #fff;
   padding: 5px;
+}
+
+.section {
+  height: 600px;
+  width: 100%;
 }
