--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@
 
 .background-image {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -129,7 +129,7 @@
 
 .image {
   width: 100%;
-  height: 90vh;
+  height: 95vh;
 }
 
 .advertisment {
@@ -139,9 +139,8 @@
   position: absolute;
   top: 40%;
   background-color: rgba(0, 0, 0, 0.5);
-  min-height: 440px;
+  max-height: 440px;
   text-align: center;
-  position: absolute;
 }
 
 .advertisment p {
