--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@
 
 .background-image {
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -148,7 +148,7 @@
   margin: 30px 0px;
 }
 
-.advertisment button {
+.shopbtn {
   padding: 8px 20px;
   border-radius: 5px;
   border: none;
@@ -160,7 +160,7 @@
   margin-top: 0.3rem;
 }
 
-.advertisment button:hover {
+.shopbtn:hover {
   background-position: -100% 0;
 }
 
@@ -169,7 +169,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 20px;
-  z-index: 1;
 }
 
 .grid div {
@@ -179,6 +178,7 @@
 
 .grid div img {
   height: 200px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -194,15 +194,57 @@
 
 .span {
   margin-left: 10%;
-  border: 1px solid red;
   height: fit-content;
   border-radius: 50% 0 50% 0;
   background-color: red;
-  color: #fff;
   padding: 5px;
 }
 
 .section {
-  height: 600px;
+  padding: 60px;
+  text-align: center;
   width: 100%;
+}
+.section p {
+  margin-top: 20px;
+}
+
+.sectionbtn {
+  padding: 8px 20px;
+  border-radius: 5px;
+  margin-top: 0.5rem;
+  outline: none;
+  border: none;
+  background-color: rgb(223, 219, 219);
+  cursor: pointer;
+}
+
+.categories-title {
+  text-align: center;
+  font-size: 2.5rem;
+  padding-top: 80px;
+  color: gray;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 20px;
+  padding: 80px 150px;
+}
+
+.grid-container div {
+  height: 200px;
+  width: 100%;
+  background-color: blue;
+}
+
+.categories-section {
+  background-color: rgb(223, 219, 219);
+}
+
+@media screen and (max-width: 1123px) {
+  .advertisment {
+    overflow-y: scroll;
+  }
 }
