chnage font size of ul

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,6 @@
 
 .links {
   list-style-type: none;
-  font-weight: bold;
 }
 
 .icons {
@@ -179,7 +178,6 @@
 .grid div img {
   height: 200px;
   width: 100%;
-  object-fit: cover;
 }
 
 .flex {
@@ -188,7 +186,7 @@
 }
 
 .flex h3 {
-  color: #fff;
+  color: white;
   padding: 10px;
 }
 
